--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ h1{
     color: var(--cor-destaque);
 }
 
+button{
+background(-color:Var(--cor-secundaria);
+color:var(--cor-texto);
+
 
      
 
